--- a/webapp/templates/index.html
+++ b/webapp/templates/index.html
@@ -17,7 +17,7 @@
               <h1>Новости</h1>
               {% for news in news_list %}
                 <h3><a href="{{ news.url_title }}">{{ news.title }}</a></h3>
-                <p>{{ news.published }}</p>
+                <p>{{ news.published.strftime('%d.%m.%Y') }}</p>
               {% endfor %}
           </div>
           <div class="col-4">
