--- a/webapp/templates/base.html
+++ b/webapp/templates/base.html
@@ -11,8 +11,7 @@
     <title>{{ page_title }}</title>
   </head>
   <body>
-  <div class="container">
-      {% with messages = get_flashed_messages() %}
+  {% with messages = get_flashed_messages() %}
         {% if messages %}
             <div class="alert alert-success" role="alert">
                 {% for message in messages %}
@@ -20,27 +19,14 @@
                 {% endfor %}
             </div>
         {% endif %}
-      {% endwith %}
-      <div class="row">
-          <div class="col-8">
-              <h1>Новости</h1>
-              {% for news in news_list %}
-                <h3><a href="{{ news.url_title }}">{{ news.title }}</a></h3>
-                <p>{{ news.published.strftime('%d.%m.%Y') }}</p>
-              {% endfor %}
-          </div>
-          <div class="col-4">
-              <h2>Погода</h2>
-              <p>
-                {% if weather_text %}
-                    Температура: {{ weather_text.temp_C }}℃, Ощущается как: {{ weather_text.FeelsLikeC }}℃
-                        ({{ weather_text.lang_ru[0].value }})
-                {% else %}
-                    Сервис не доступен
-                {% endif %}
-              </p>
-          </div>
-      </div>
+  {% endwith %}
+
+  {% include "menu.html" %}
+
+  <div class="container">
+    <h1>{{ page_title }}</h1>
+    {% block content %}
+    {% endblock %}
   </div>
 
 
