--- a/webapp/templates/news/index.html
+++ b/webapp/templates/news/index.html
@@ -2,10 +2,10 @@
 {% block content %}
       <div class="row">
           <div class="col-8">
-              <h1>Новости</h1>
+              <h1>Новости Python</h1>
               {% for news in news_list %}
-                <h3><a href="{{ news.url_title }}">{{ news.title }}</a></h3>
-                <p>{{ news.published.strftime('%d.%m.%Y') }}</p>
+                <h3><a href="{{ url_for('news.single_news', news_id=news.id) }}">{{ news.title }}</a></h3>
+                <p>{{ news.published.strftime('%d.%m.%Y') }} | Комментарии: {{ news.comments_count() }}</p>
               {% endfor %}
           </div>
           <div class="col-4">
