--- a/webapp/templates/user/login.html
+++ b/webapp/templates/user/login.html
@@ -1,14 +1,6 @@
 {% extends "base.html" %}
 {% block content %}
-      {% with messages = get_flashed_messages() %}
-        {% if messages %}
-            <div class="alert alert-success" role="alert">
-                {% for message in messages %}
-                    {{ message }}
-                {% endfor %}
-            </div>
-        {% endif %}
-      {% endwith %}
+    {% include('messages.html') %}
       <div class="row">
           <div class="col-6">
               <form action="{{ url_for('user.process_login') }}" method="post">
